# parliament-bomb

./: .gitignore  .mailmap  Cargo.toml  LICENSE  Makefile  Makefile.am  README.md  about.hbs  about.toml  flake.nix  initBridge.py  main-legacy.py  main.py  nix.py  parliamentctl.c
.github/workflows/: build_cargo.yml  build_nix.yml  build_nix_develop.yml  formatting_check.yml
legacy/: Makefile.am  configure.ac  flake.nix.old  initBridge.py  main-legacy.py
man/: licenses.html  parliamentctl.1
parliamentd/: parliamentd.service
src/: commands.rs  initBridge.py  main.rs  parliamentctl.c  sanityCheck.c  sanityCheck.rs  splashes.rs
src/commands/: ping.rs
webui/: index.css  index.html  index.js  test.json  webui.html
