[package]
name = "parliamentbomb"
description = "Discord Bot for the Grade Server"
repository = ""
version = "3.0.0"
authors = [ "gradetools contributors", "parliamentbomb contributors" ]
edition = "2021"
license = "BSD-3-Clause"

[dependencies]
# serenity = "0.12.1"
dotenv = "0.15.0"
tokio = { version = "1.0", features = ["full"] }
cargo-license = "0.6.1"
poise = "0.6.1"
env_logger = "0.11.3"
colored = "2.1.0"
ctrlc = "3.4.2"
reqwest = "0.11"